# AsFem-1

./: CMakeLists.txt  README.md
include/: Welcome.h
include/BCSystem/: BCSystem.h
include/DofHandler/: DofHandler.h
include/EquationSystem/: EquationSystem.h
include/FE/: FE.h  Qrule.h
include/FESystem/: FESystem.h
include/InputSystem/: InputSystem.h
include/Kernels/: BoundaryKernel.h  Kernel.h  Laplace.h
include/Mesh/: Mesh.h  Mesh1D.h  Mesh2D.h  MeshBase.h  MeshTools.h
include/SolverSystem/: SolverSystem.h
include/StringUtils/: StringUtils.h
src/: Welcome.h  main.cpp
src/DofHandler/: DofHandler.cpp
src/EquationSystem/: EquationSystem.cpp
src/FE/: FE.cpp  Qrule.cpp  Shp1D.cpp  Shp2D.cpp  Shp3D.cpp
src/FESystem/: FESystem.cpp
src/InputSystem/: InputSystem.cpp  ReadDofsName.cpp  ReadMesh.cpp
src/Kernels/: Laplace.cpp
src/Mesh/: CreateMesh.cpp  Mesh.cpp  Mesh1D.cpp  Mesh1D.h  Mesh2D.cpp  Mesh2D.h  MeshBase.h  MeshTools.cpp
src/SolverSystem/: SolverSystem.cpp
src/StringUtils/: GotoLine.cpp  IsBracketMatch.cpp  RemoveSpace.cpp  SplitNum.cpp  SplitNumAfter.cpp  SplitStr.cpp  StrToLower.cpp  StrToUpper.cpp  StrVecToLower.cpp  StrVecToUpper.cpp  StringUtils.h
